syntax = "proto3";

option go_package = "ys-tools/pkg/types/definepb";

enum AccountType {
  ACCOUNT_MIHOYO_GUEST = 0;
  ACCOUNT_MIHOYO = 1;
  ACCOUNT_XIAOMI = 11;
  ACCOUNT_COOLPAD = 12;
  ACCOUNT_YYB = 13;
  ACCOUNT_BILI = 14;
  ACCOUNT_HUAWEI = 15;
  ACCOUNT_MEIZU = 16;
  ACCOUNT_360 = 17;
  ACCOUNT_OPPO = 18;
  ACCOUNT_VIVO = 19;
  ACCOUNT_UC = 20;
  ACCOUNT_WANDOJIA = 21;
  ACCOUNT_LENOVO = 22;
  ACCOUNT_JINLI = 23;
  ACCOUNT_BAIDU = 25;
  ACCOUNT_DANGLE = 26;
}

enum ChannelIdType {
  CHANNEL_ID_NONE = 0;
  CHANNEL_ID_MIHOYO = 1;
  CHANNEL_ID_XIAOMI = 11;
  CHANNEL_ID_COOLPAD = 12;
  CHANNEL_ID_YYB = 13;
  CHANNEL_ID_BILI = 14;
  CHANNEL_ID_HUAWEI = 15;
  CHANNEL_ID_MEIZU = 16;
  CHANNEL_ID_360 = 17;
  CHANNEL_ID_OPPO = 18;
  CHANNEL_ID_VIVO = 19;
  CHANNEL_ID_UC = 20;
  CHANNEL_ID_LENOVO = 22;
  CHANNEL_ID_JINLI = 23;
  CHANNEL_ID_BAIDU = 25;
  CHANNEL_ID_DANGLE = 26;
}

enum LanguageType {
  LANGUAGE_NONE = 0;
  LANGUAGE_EN = 1; // 英语
  LANGUAGE_SC = 2; // 简体中文
  LANGUAGE_TC = 3; // 繁体中文
  LANGUAGE_FR = 4; // 法语
  LANGUAGE_DE = 5; // 德语
  LANGUAGE_ES = 6; // 西班牙语
  LANGUAGE_PT = 7; // 葡萄牙语
  LANGUAGE_RU = 8; // 俄语
  LANGUAGE_JP = 9; // 日语
  LANGUAGE_KR = 10; // 韩语
  LANGUAGE_TH = 11; // 泰语
  LANGUAGE_VN = 12; // 越南语
  LANGUAGE_ID = 13; // 印尼语
  LANGUAGE_TR = 14; // 土耳其语
  LANGUAGE_IT = 15; // 意大利语
}

enum PlatformType {
  EDITOR = 0;
  IOS = 1;
  ANDROID = 2;
  PC = 3;
  PS4 = 4;
  SERVER = 5;
  CLOUD_ANDROID = 6;
  CLOUD_IOS = 7;
  PS5 = 8;
  CLOUD_WEB = 9;
  CLOUD_TV = 10;
  CLOUD_MAC = 11;
  CLOUD_PC = 12;
  CLOUD_THIRD_PARTY_MOBILE = 13;
  CLOUD_THIRD_PARTY_PC = 14;
}

message RegionSimpleInfo {
  string name = 1;
  string title = 2;
  string type = 3;
  string dispatch_url = 4;
}

message QueryRegionListHttpRsp {
  int32 retcode = 1;
  repeated RegionSimpleInfo region_list = 2;
  bytes client_secret_key = 5;
  bytes client_custom_config_encrypted = 6;
  bool enable_login_pc = 7;
}

message ForceUpdateInfo {
  string force_update_url = 1;
}

message StopServerInfo {
  uint32 stop_begin_time = 1;
  uint32 stop_end_time = 2;
  string url = 3;
  string content_msg = 4;
}

message ResVersionConfig {
  uint32 version = 1;
  bool relogin = 2;
  string md5 = 3;
  string release_total_size = 4;
  string version_suffix = 5;
  string branch = 6;
  string next_script_version = 7;
}

message RegionInfo {
  string gateserver_ip = 1;
  uint32 gateserver_port = 2;
  string pay_callback_url = 3;
  string area_type = 7;
  string resource_url = 8;
  string data_url = 9;
  string feedback_url = 10;
  string bulletin_url = 11;
  string resource_url_bak = 12;
  string data_url_bak = 13;
  uint32 client_data_version = 14;
  string handbook_url = 16;
  uint32 client_silence_data_version = 18;
  string client_data_md5 = 19;
  string client_silence_data_md5 = 20;
  ResVersionConfig res_version_config = 22;
  bytes secret_key = 23;
  string official_community_url = 24;
  string client_version_suffix = 26;
  string client_silence_version_suffix = 27;
  bool use_gateserver_domain_name = 28;
  string gateserver_domain_name = 29;
  string user_center_url = 30;
  string account_bind_url = 31;
  string cdkey_url = 32;
  string privacy_policy_url = 33;
  string next_resource_url = 34;
  ResVersionConfig next_res_version_config = 35;
  string game_biz = 36;
}

message QueryCurrRegionHttpRsp {
  int32 retcode = 1;
  string msg = 2;
  RegionInfo region_info = 3;
  bytes client_secret_key = 11;
  bytes region_custom_config_encrypted = 12;
  bytes client_region_custom_config_encrypted = 13;
  string connect_gate_ticket = 14;
  oneof detail {
    ForceUpdateInfo force_update = 4;
    StopServerInfo stop_server = 5;
  }
}
